# datapack-haskell

./: .gitignore  DataPack.cabal  LICENSE  README.md  stack.yaml
src/Data/: DataPack.hs  Source.hs  Target.hs
src/Data/DataPack/: Get.hs  Pack.hs  Unpack.hs
test/: Spec.hs  Test.hs  UnpackSpec.hs
test/Data/DataPack/: PackSpec.hs  RoundTripSpec.hs  UnpackSpec.hs
