name:                DataPack
version:             0.1.0.0
synopsis:            A Haskell implementation of DataPack
description:         A Haskell implementation of DataPack
homepage:            https://github.com/githubuser/DataPack#readme
license:             BSD3
license-file:        LICENSE
author:              David M. Sledge
maintainer:          David M. Sledge <<first name><period><last initial><at>gmail<period>com>
copyright:           2017 David M. Sledge
category:            Data
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:        -Weverything -Wno-missing-exported-signatures
                      -Wno-missing-import-lists -Wno-missed-specialisations
                      -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-missing-safe-haskell-mode
  exposed-modules:     Data.DataPack, Data.DataPack.Unpack, Data.Source, Data.DataPack.Pack, Data.Target
  build-depends:       base >= 4.13.0.0 && < 5,
                        ListLike,
                        bytestring >= 0.10.10.0,
                        containers >= 0.6.2.1,
                        data-binary-ieee754 >= 0.4.4,
                        mtl >= 2.3.1,
                        text >= 1.2.4.0,
                        transformers >= 0.5.6.2,
                        utf8-string
  default-language:    Haskell2010

test-suite DataPack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:        -Weverything -Wno-missing-exported-signatures
                      -Wno-missing-import-lists -Wno-missed-specialisations
                      -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe
                      -Wno-missing-local-signatures
                      -Wno-monomorphism-restriction
                      -Wno-missing-safe-haskell-mode
  other-modules:     Data.DataPack.UnpackSpec, Data.DataPack.PackSpec
  main-is:             Spec.hs
  build-depends:       base, transformers >= 0.5.6.2, mtl >= 2.2.2
                     , DataPack, bytestring >= 0.10.10.0, text >= 1.2.4.0
                     , ListLike
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/david-sledge/datapack-haskell
